--- a/bib.bib
+++ b/bib.bib
@@ -287,17 +287,12 @@
 @inproceedings{chen2023human,
   title={Human Preferences and Robot Constraints Aware Shared Control for Smooth Follower Motion Execution},
   author={Chen, Qibin and Zhu$^\ast$, Yaonan and Hansel, Kay and Aoyama, Tadayoshi and Hasegawa, Yasuhisa},
-  booktitle={2023 International Symposium on Micro-NanoMehatronics and Human Science (MHS)},
+  journal={2023 International Symposium on Micro-NanoMehatronics and Human Science (MHS)},
   custom_type  = {C. International Conference},
   year={2023}
 }
 
-@article{unde4530722kinematic,
-  title={Kinematic Analysis and Experimental Verification of Transforming Planar Linkage Mechanism},
-  author={Unde, Jayant and Colan, Jacinto and Zhu, Yaonan and Aoyama, Tadayoshi and Takeuchi, Masaru and Hasegawa, Yasuhisa},
-  custom_type  = {A. Journal Article},
-  journal={Available at SSRN 4530722}
-}
+
 
 @inproceedings{zhang2023relative,
   title={Relative-Posture-Fixed Model Predictive Human-Following Control with Visibility Constraints in Obstacle Environments},
@@ -375,7 +370,7 @@
 @inproceedings{becker2024integrating,
   title={Integrating Visuo-tactile Sensing with Haptic Feedback for Teleoperated Robot Manipulation},
   author={Becker, Noah and Gattung, Erik and Hansel, Kay and Schneider, Tim and Zhu, Yaonan and Hasegawa, Yasuhisa and Peters, Jan},
-  booktitle={2024 IEEE International Conference on Robotics and Automation (ICRA)},
+  journal={2024 IEEE International Conference on Robotics and Automation (ICRA)},
   custom_type  = {C. International Conference},
   note={(ViTac 2024 Workshop)},
   year={2024}
