--- a/bib.bib
+++ b/bib.bib
@@ -90,6 +90,7 @@
   pages={2981--2986},
   year={2020},
   custom_type  = {A. Journal Article},
+  bibbase_note ={Presented in ICRA 2020},
   publisher={IEEE}
 }
 
@@ -121,6 +122,7 @@
   volume={2022},
   pages={FrC1--1},
   custom_type  = {C. International Conference},
+  bibbase_note ={Best Paper Award},
   year={2022}
 }
 
@@ -289,6 +291,7 @@
   author={Chen, Qibin and Zhu$^\ast$, Yaonan and Hansel, Kay and Aoyama, Tadayoshi and Hasegawa, Yasuhisa},
   journal={2023 International Symposium on Micro-NanoMehatronics and Human Science (MHS)},
   custom_type  = {C. International Conference},
+  bibbase_note ={Best Paper Award},
   year={2023}
 }
 
@@ -328,6 +331,7 @@
   pages={119--125},
   year={2023},
   custom_type  = {C. International Conference},
+  bibbase_note ={Best Paper Award},
   organization={IEEE}
 }
 
