minor color font edits

--- a/bib.bib
+++ b/bib.bib
@@ -90,7 +90,7 @@
   pages={2981--2986},
   year={2020},
   custom_type  = {A. Journal Article},
-  bibbase_note ={Presented in ICRA 2020},
+  bibbase_note ={Presented at ICRA 2020},
   publisher={IEEE}
 }
 
@@ -115,16 +115,7 @@
   publisher={Elsevier}
 }
 
-@inproceedings{yaonan2022visual,
-  title={Visual Tactile Sensor Based Force Estimation for Position-Force Teleoperation},
-  author={Yaonan Zhu, Shukrullo Nazirjonov, Bingheng Jiang, Jacinto Colan, Tadayoshi Aoyama, Yasuhisa Hasegawa, Boris Belousov, Kay Hansel, Jan Peters},
-  booktitle={2022 IEEE International D.conference on Cyborg and Bionic Systems},
-  volume={2022},
-  pages={FrC1--1},
-  custom_type  = {C. International Conference},
-  bibbase_note ={Best Paper Award},
-  year={2022}
-}
+
 
 @article{morita2022auditory,
   title={Auditory feedback for enhanced sense of agency in shared control},
@@ -158,6 +149,20 @@
   organization={一般社団法人 日本機械学会}
 }
 
+@article{10561501,
+  author={Liu, Haokun and Zhu$^\ast$, Yaonan and Kato, Kenji and Tsukahara, Atsushi and Kondo, Izumi and Aoyama, Tadayoshi and Hasegawa, Yasuhisa},
+  journal={IEEE Robotics and Automation Letters}, 
+  title={Enhancing the LLM-Based Robot Manipulation Through Human-Robot Collaboration}, 
+  year={2024},
+  volume={9},
+  number={8},
+  pages={6904-6911},
+  custom_type  = {A. Journal Article},
+  note={($^\ast$Corresponding Author)},
+  bibbase_note={Will be presented at ICRA 2025},
+  keywords={Task analysis;Robots;Libraries;Codes;Planning;Trajectory;Natural languages;AI-enabled robotics;human-robot collaboration},
+  doi={10.1109/LRA.2024.3415931}}
+
 @inproceedings{zhu2023visual,
   title={Visual tactile sensor based force estimation for position-force teleoperation},
   author={Zhu, Yaonan and Nazirjonov, Shukrullo and Jiang, Bingheng and Colan, Jacinto and Aoyama, Tadayoshi and Hasegawa, Yasuhisa and Belousov, Boris and Hansel, Kay and Peters, Jan},
@@ -165,6 +170,7 @@
   pages={49--52},
   year={2023},
   custom_type  = {C. International Conference},
+  bibbase_note ={Best Paper Award},
   organization={IEEE}
 }
 
@@ -286,10 +292,21 @@
   publisher={IEEE}
 }
 
+@inproceedings{zhu2024reduce,
+  title={Reducing Physical Load for Desk-Height Tasks by Supporting Kneeling Posture with a Lower Limb Exoskeleton},
+  author={Zhu, Yaonan and Sugiura, Sojiro and Huang, Jian and Hasegawa, Yasuhisa},
+  booktitle={2024 IEEE International Conference on Mechatronics and Automation (IEEE ICMA 2024)},
+  pages={293--299},
+  year={2024},
+  custom_type  = {C. International Conference},
+  bibbase_note ={Best Paper Award},
+  organization={IEEE}
+}
+
 @inproceedings{chen2023human,
   title={Human Preferences and Robot Constraints Aware Shared Control for Smooth Follower Motion Execution},
   author={Chen, Qibin and Zhu$^\ast$, Yaonan and Hansel, Kay and Aoyama, Tadayoshi and Hasegawa, Yasuhisa},
-  journal={2023 International Symposium on Micro-NanoMehatronics and Human Science (MHS)},
+  booktitle={2023 International Symposium on Micro-NanoMehatronics and Human Science (MHS)},
   custom_type  = {C. International Conference},
   bibbase_note ={Best Paper Award},
   year={2023}
@@ -374,7 +391,7 @@
 @inproceedings{becker2024integrating,
   title={Integrating Visuo-tactile Sensing with Haptic Feedback for Teleoperated Robot Manipulation},
   author={Becker, Noah and Gattung, Erik and Hansel, Kay and Schneider, Tim and Zhu, Yaonan and Hasegawa, Yasuhisa and Peters, Jan},
-  journal={2024 IEEE International Conference on Robotics and Automation (ICRA)},
+  booktitle={2024 IEEE International Conference on Robotics and Automation (ICRA)},
   custom_type  = {C. International Conference},
   note={(ViTac 2024 Workshop)},
   year={2024}
@@ -390,17 +407,7 @@
   organization={IEEE}
 }
 
-@article{10561501,
-  author={Liu, Haokun and Zhu$^\ast$, Yaonan and Kato, Kenji and Tsukahara, Atsushi and Kondo, Izumi and Aoyama, Tadayoshi and Hasegawa, Yasuhisa},
-  journal={IEEE Robotics and Automation Letters}, 
-  title={Enhancing the LLM-Based Robot Manipulation Through Human-Robot Collaboration}, 
-  year={2024},
-  volume={9},
-  number={8},
-  pages={6904-6911},
-  custom_type  = {A. Journal Article},
-  keywords={Task analysis;Robots;Libraries;Codes;Planning;Trajectory;Natural languages;AI-enabled robotics;human-robot collaboration},
-  doi={10.1109/LRA.2024.3415931}}
+
 
 @article{unde2024development,
   title={Development of a compliant gripper for safe robot-assisted trouser dressing-undressing},
