minor color font edits

--- a/bib.bib
+++ b/bib.bib
@@ -1,6 +1,20 @@
+@article{10561501,
+  author={Liu, Haokun and Zhu$^\ast$, Yaonan and Kato, Kenji and Tsukahara, Atsushi and Kondo, Izumi and Aoyama, Tadayoshi and Hasegawa, Yasuhisa},
+  journal={IEEE Robotics and Automation Letters}, 
+  title={Enhancing the LLM-Based Robot Manipulation Through Human-Robot Collaboration}, 
+  year={2024},
+  volume={9},
+  number={8},
+  pages={6904-6911},
+  custom_type  = {A. Journal Article},
+  note={($^\ast$Corresponding Author)},
+  bibbase_note={Will be presented at ICRA 2025},
+  keywords={Task analysis;Robots;Libraries;Codes;Planning;Trajectory;Natural languages;AI-enabled robotics;human-robot collaboration},
+  doi={10.1109/LRA.2024.3415931}}
+
 @article{shao2014individual,
   title={The individual N-and C-lobes of calmodulin tether to the Cav1. 2 channel and rescue the channel activity from run-down in ventricular myocytes of guinea-pig heart},
-  author={Shao, Dongxue and Zhao, Meimi and Xu, Jianjun and Feng, Rui and Guo, Feng and Hu, Huiyuan and Sun, Xuefei and Gao, Qinghua and He, Guilin and Sun, Wei and others},
+  author={Shao, Dongxue and Zhao, Meimi and Xu, Jianjun and Feng, Rui and Guo, Feng and Hu, Huiyuan and Sun, Xuefei and Gao, Qinghua and He, Guilin and Sun, Wei and Wang,Hongmei and  Yu, Lifeng and  Liu,Suyuan and  Zhu,Yaonan and Minobe, Etsuko and Zhu, Tong and Kameyama, Masaki and Hao, Liying},
   journal={FEBS letters},
   volume={588},
   number={21},
@@ -45,7 +59,7 @@
 
 @inproceedings{yaonan2017development,
   title={Development of an Emotion Estimation System for Educational-Support Robot},
-  author={Yaonan Zhu, Felix Jimenez, Tomohiro Yoshikawa, Takeshi Furuhashi, Tong Zhu},
+  author={Zhu, Yaonan and Jimenez,  Felix and Yoshikawa, Tomohiro and  Furuhashi, Takeshi and Zhu, Tong},
   booktitle={The 18th International Symposium on Advanced Intelligent Systems (ISIS2017), EXCO in Daegu, Republic of Korea},
   custom_type  = {C. International Conference},
   year={2017}
@@ -53,7 +67,7 @@
 
 @inproceedings{yaonan2018evaluating,
   title={Evaluating shifted body representation and modified body schema using extra robotic thumb.},
-  author={Yaonan Zhu, Hiroshi Shikida, Tadayoshi Aoyama, Yasuhisa Hasegawa},
+  author={Zhu, Yaonan and Shikida, Hiroshi and Aoyama, Tadayoshi and Hasegawa, Yasuhisa},
   booktitle={IEEE International Conference on Cyborg and Bionic Systems (CBS)},
   pages={282--285},
   custom_type  = {C. International Conference},
@@ -148,20 +162,6 @@
   custom_type  = {D. Domestic Conference},
   organization={一般社団法人 日本機械学会}
 }
-
-@article{10561501,
-  author={Liu, Haokun and Zhu$^\ast$, Yaonan and Kato, Kenji and Tsukahara, Atsushi and Kondo, Izumi and Aoyama, Tadayoshi and Hasegawa, Yasuhisa},
-  journal={IEEE Robotics and Automation Letters}, 
-  title={Enhancing the LLM-Based Robot Manipulation Through Human-Robot Collaboration}, 
-  year={2024},
-  volume={9},
-  number={8},
-  pages={6904-6911},
-  custom_type  = {A. Journal Article},
-  note={($^\ast$Corresponding Author)},
-  bibbase_note={Will be presented at ICRA 2025},
-  keywords={Task analysis;Robots;Libraries;Codes;Planning;Trajectory;Natural languages;AI-enabled robotics;human-robot collaboration},
-  doi={10.1109/LRA.2024.3415931}}
 
 @inproceedings{zhu2023visual,
   title={Visual tactile sensor based force estimation for position-force teleoperation},
@@ -308,6 +308,7 @@
   author={Chen, Qibin and Zhu$^\ast$, Yaonan and Hansel, Kay and Aoyama, Tadayoshi and Hasegawa, Yasuhisa},
   booktitle={2023 International Symposium on Micro-NanoMehatronics and Human Science (MHS)},
   custom_type  = {C. International Conference},
+  note={($^\ast$Corresponding Author)},
   bibbase_note ={Best Paper Award},
   year={2023}
 }
@@ -329,6 +330,7 @@
   author={Liu, Haokun and Zhu$^\ast$, Yaonan and Kato, Kenji and Kondo, Izumi and Aoyama, Tadayoshi and Hasegawa, Yasuhisa},
   booktitle={2023 International Symposium on Micro-NanoMehatronics and Human Science (MHS)},
   custom_type  = {C. International Conference},
+  note={($^\ast$Corresponding Author)},
   year={2023}
 }
 
