minor color font edits

--- a/bib.bib
+++ b/bib.bib
@@ -287,9 +287,12 @@
   title={Passive lower limb exoskeleton for kneeling and postural transition assistance with expanded support polygon},
   author={Sugiura, Sojiro and Zhu, Yaonan and Huang, Jian and Hasegawa, Yasuhisa},
   journal={IEEE/ASME Transactions on Mechatronics},
-  year={2023},
-  custom_type  = {A. Journal Article},
-  publisher={IEEE}
+  year={2024},
+  volume={29},
+  number={2},
+  pages={1193-1204},
+  keywords={Exoskeletons;Knee;Torque;Springs;Thermal stability;Stability analysis;Task analysis;Exoskeleton;lower limb support;stand-to-kneel and kneel-to-stand (STK-KTS) movement;work assistance},
+  doi={10.1109/TMECH.2023.3294255}
 }
 
 @inproceedings{zhu2024reduce,
