add links to paper

--- a/bib.bib
+++ b/bib.bib
@@ -1,17 +1,3 @@
-@article{10561501,
-  author={Liu, Haokun and Zhu$^\ast$, Yaonan and Kato, Kenji and Tsukahara, Atsushi and Kondo, Izumi and Aoyama, Tadayoshi and Hasegawa, Yasuhisa},
-  journal={IEEE Robotics and Automation Letters}, 
-  title={Enhancing the LLM-Based Robot Manipulation Through Human-Robot Collaboration}, 
-  year={2024},
-  volume={9},
-  number={8},
-  pages={6904-6911},
-  custom_type  = {A. Journal Article},
-  note={($^\ast$Corresponding Author)},
-  bibbase_note={Will be presented at ICRA 2025},
-  keywords={Task analysis;Robots;Libraries;Codes;Planning;Trajectory;Natural languages;AI-enabled robotics;human-robot collaboration},
-  doi={10.1109/LRA.2024.3415931}}
-
 @article{shao2014individual,
   title={The individual N-and C-lobes of calmodulin tether to the Cav1. 2 channel and rescue the channel activity from run-down in ventricular myocytes of guinea-pig heart},
   author={Shao, Dongxue and Zhao, Meimi and Xu, Jianjun and Feng, Rui and Guo, Feng and Hu, Huiyuan and Sun, Xuefei and Gao, Qinghua and He, Guilin and Sun, Wei and Wang,Hongmei and  Yu, Lifeng and  Liu,Suyuan and  Zhu,Yaonan and Minobe, Etsuko and Zhu, Tong and Kameyama, Masaki and Hao, Liying},
@@ -291,6 +277,7 @@
   volume={29},
   number={2},
   pages={1193-1204},
+  custom_type  = {A. Journal Article},
   keywords={Exoskeletons;Knee;Torque;Springs;Thermal stability;Stability analysis;Task analysis;Exoskeleton;lower limb support;stand-to-kneel and kneel-to-stand (STK-KTS) movement;work assistance},
   doi={10.1109/TMECH.2023.3294255}
 }
@@ -434,3 +421,34 @@
   custom_type  = {A. Journal Article},
   year={2024}
 }
+
+@article{s24186050,
+AUTHOR = {Liu, Songtao and Zhu, Yaonan and Aoyama, Tadayoshi and Nakaya, Masayuki and Hasegawa, Yasuhisa},
+TITLE = {Latent Space Search-Based Adaptive Template Generation for Enhanced Object Detection in Bin-Picking Applications},
+JOURNAL = {Sensors},
+VOLUME = {24},
+YEAR = {2024},
+NUMBER = {18},
+ARTICLE-NUMBER = {6050},
+ISSN = {1424-8220},
+ABSTRACT = {Template matching is a common approach in bin-picking tasks. However, it often struggles in complex environments, such as those with different object poses, various background appearances, and varying lighting conditions, due to the limited feature representation of a single template. Additionally, during the bin-picking process, the template needs to be frequently updated to maintain detection performance, and finding an adaptive template from a vast dataset poses another challenge. To address these challenges, we propose a novel template searching method in a latent space trained by a Variational Auto-Encoder (VAE), which generates an adaptive template dynamically based on the current environment. The proposed method was evaluated experimentally under various conditions, and in all scenarios, it successfully completed the tasks, demonstrating its effectiveness and robustness for bin-picking applications. Furthermore, we integrated our proposed method with YOLO, and the experimental results indicate that our method effectively improves YOLO’s detection performance.},
+custom_type  = {A. Journal Article},
+DOI = {10.3390/s24186050}
+}
+
+@article{10561501,
+  author={Liu, Haokun and Zhu$^\ast$, Yaonan and Kato, Kenji and Tsukahara, Atsushi and Kondo, Izumi and Aoyama, Tadayoshi and Hasegawa, Yasuhisa},
+  journal={IEEE Robotics and Automation Letters}, 
+  title={Enhancing the LLM-Based Robot Manipulation Through Human-Robot Collaboration}, 
+  year={2024},
+  volume={9},
+  number={8},
+  pages={6904-6911},
+  custom_type  = {A. Journal Article},
+  note={($^\ast$Corresponding Author)},
+  bibbase_note={Will be presented at ICRA 2025},
+  keywords={Task analysis;Robots;Libraries;Codes;Planning;Trajectory;Natural languages;AI-enabled robotics;human-robot collaboration},
+  doi={10.1109/LRA.2024.3415931}
+}
+
+
