add yamamoto paper

--- a/bib.bib
+++ b/bib.bib
@@ -452,3 +452,17 @@ DOI = {10.3390/s24186050}
 }
 
 
+@Article{robotics13100143,
+AUTHOR = {Yamamoto, Kento and Zhu, Yaonan and Aoyama, Tadayoshi and Hasegawa, Yasuhisa},
+TITLE = {Virtual Hand Deformation-Based Pseudo-Haptic Feedback for Enhanced Force Perception and Task Performance in Physically Constrained Teleoperation},
+JOURNAL = {Robotics},
+VOLUME = {13},
+YEAR = {2024},
+NUMBER = {10},
+ARTICLE-NUMBER = {143},
+custom_type  = {A. Journal Article},
+ISSN = {2218-6581},
+ABSTRACT = {Force-feedback devices enhance task performance in most robot teleoperations. However, their increased size with additional degrees of freedom can limit the robot’s applicability. To address this, an interface that visually presents force feedback is proposed, eliminating the need for bulky physical devices. Our telepresence system renders robotic hands transparent in the camera image while displaying virtual hands. The forces applied to the robot deform these virtual hands. The deformation creates an illusion that the operator’s hands are deforming, thus providing pseudo-haptic feedback. We conducted a weight comparison experiment in a virtual reality environment to evaluate force sensitivity. In addition, we conducted an object touch experiment to assess the speed of contact detection in a robot teleoperation setting. The results demonstrate that our method significantly surpasses conventional pseudo-haptic feedback in conveying force differences. Operators detected object touch 24.7% faster using virtual hand deformation compared to conditions without feedback. This matches the response times of physical force-feedback devices. This interface not only increases the operator’s force sensitivity but also matches the performance of conventional force-feedback devices without physically constraining the operator. Therefore, the interface enhances both task performance and the experience of teleoperation.}
+}
+
+
