add domestic paper

--- a/bib.bib
+++ b/bib.bib
@@ -72,7 +72,7 @@
 }
 
 @inproceedings{zhu2019robomech,
-  title={テレオペレーションにおける拘東状態の身体性変化},
+  title={テレオペレーションにおける拘束状態の身体性変化},
   author={朱曜南 and 青山忠義 and 長谷川泰久},
   booktitle={ロボティクス・メカトロニクス講演会講演概要集 2019},
   pages={1A1--R05},
@@ -463,6 +463,55 @@ ARTICLE-NUMBER = {143},
 custom_type  = {A. Journal Article},
 ISSN = {2218-6581},
 ABSTRACT = {Force-feedback devices enhance task performance in most robot teleoperations. However, their increased size with additional degrees of freedom can limit the robot’s applicability. To address this, an interface that visually presents force feedback is proposed, eliminating the need for bulky physical devices. Our telepresence system renders robotic hands transparent in the camera image while displaying virtual hands. The forces applied to the robot deform these virtual hands. The deformation creates an illusion that the operator’s hands are deforming, thus providing pseudo-haptic feedback. We conducted a weight comparison experiment in a virtual reality environment to evaluate force sensitivity. In addition, we conducted an object touch experiment to assess the speed of contact detection in a robot teleoperation setting. The results demonstrate that our method significantly surpasses conventional pseudo-haptic feedback in conveying force differences. Operators detected object touch 24.7% faster using virtual hand deformation compared to conditions without feedback. This matches the response times of physical force-feedback devices. This interface not only increases the operator’s force sensitivity but also matches the performance of conventional force-feedback devices without physically constraining the operator. Therefore, the interface enhances both task performance and the experience of teleoperation.}
+}
+
+@inproceedings{hatano2023depth_perception,
+  author    = {畑野勝  and 朱曜南  and 青山忠義  and 長谷川泰久},
+  title     = {遠隔操作における広視野角映像提示による奥行き認識精度の向上},
+  booktitle = {第36回日本ロボット学会学術講演会予稿集},
+  year      = {2023},
+  publisher = {一般社団法人 日本ロボット学会},
+  custom_type  = {D. Domestic Conference},
+  pages     = {3C4-04}
+}
+
+@inproceedings{wang2023multi_camera,
+  author    = {王天放  and 朱曜南  and 青山忠義  and 長谷川泰久},
+  title     = {複数カメラによる日常生活における三次元位置計測},
+  booktitle = {ロボティクス・メカトロニクス講演会講演概要集},
+  year      = {2023},
+  custom_type  = {D. Domestic Conference},
+  publisher = {一般社団法人 日本機械学会},
+  pages     = {1A1-C19}
+}
+
+@inproceedings{yamaguchi2022elevator_autonomous,
+  author    = {山口信太郎  and 畑野勝  and 朱曜南  and 青山忠義  and 長谷川泰久},
+  title     = {複合センシングによる環境認識と画像処理を用いた未知環境におけるエレベータ自動乗降システム},
+  booktitle = {第23回計測自動制御学会システムインテグレーション部門講演会(SI2022)},
+  year      = {2022},
+  custom_type  = {D. Domestic Conference},
+  pages     = {3A2-B07}
+}
+
+@inproceedings{zhu2019intuitive_manipulation,
+  author    = {Yaonan Zhu and Tadayoshi Aoyama and Yasuhisa Hasegawa},
+  title     = {Intuitive Manipulation of Constrained Objects through Teleoperation},
+  booktitle = {The 7th General Meeting of Embodied-Brain System},
+  year      = {2019},
+  address   = {Hanamaki, Japan},
+  custom_type  = {D. Domestic Conference},
+  month     = {March}
+}
+
+@inproceedings{zhu2019body_schema,
+  author    = {朱曜南  and 式田寛  and 青山忠義  and 長谷川泰久},
+  title     = {人工拇指使用後の身体表現転移及び身体図式変化の評価},
+  booktitle = {第36回日本ロボット学会学術講演会予稿集},
+  year      = {2019},
+  publisher = {一般社団法人 日本ロボット学会},
+  custom_type  = {D. Domestic Conference},
+  pages     = {1B2-01}
 }
 
 
