--- a/bib.bib
+++ b/bib.bib
@@ -465,6 +465,18 @@ ISSN = {2218-6581},
 ABSTRACT = {Force-feedback devices enhance task performance in most robot teleoperations. However, their increased size with additional degrees of freedom can limit the robot’s applicability. To address this, an interface that visually presents force feedback is proposed, eliminating the need for bulky physical devices. Our telepresence system renders robotic hands transparent in the camera image while displaying virtual hands. The forces applied to the robot deform these virtual hands. The deformation creates an illusion that the operator’s hands are deforming, thus providing pseudo-haptic feedback. We conducted a weight comparison experiment in a virtual reality environment to evaluate force sensitivity. In addition, we conducted an object touch experiment to assess the speed of contact detection in a robot teleoperation setting. The results demonstrate that our method significantly surpasses conventional pseudo-haptic feedback in conveying force differences. Operators detected object touch 24.7% faster using virtual hand deformation compared to conditions without feedback. This matches the response times of physical force-feedback devices. This interface not only increases the operator’s force sensitivity but also matches the performance of conventional force-feedback devices without physically constraining the operator. Therefore, the interface enhances both task performance and the experience of teleoperation.}
 }
 
+@Article{10750248,
+author={Morita, Tomoya and Armleder, Simon and Zhu, Yaonan and Iino, Hiroto and Aoyama, Tadayoshi and Cheng, Gordon and Hasegawa, Yasuhisa},
+journal={IEEE Robotics and Automation Letters}, 
+title={RNN-Based Visual Guidance for Enhanced Sense of Agency in Teleoperation With Time-Varying Delays}, 
+year={2024},
+volume={},
+number={},
+pages={1-8},
+custom_type  = {A. Journal Article},
+keywords={Robots;Delays;Visualization;Delay effects;Real-time systems;Predictive models;Cameras;Robot vision systems;Resists;Accuracy;Embodied cognitive science;learning from demonstration;telerobotics and teleoperation},
+doi={10.1109/LRA.2024.3495591}}
+
 @inproceedings{hatano2023depth_perception,
   author    = {畑野勝  and 朱曜南  and 青山忠義  and 長谷川泰久},
   title     = {遠隔操作における広視野角映像提示による奥行き認識精度の向上},
