--- a/bib.bib
+++ b/bib.bib
@@ -33,6 +33,17 @@
   publisher={Trans Tech Publications Ltd}
 }
 
+@article{fozilov2025ros,
+  title={IST-ROS: A flexible object segmentation and tracking framework for robotics applications},
+  author={Fozilov, Khusniddin and Yamada, Yutaro and Colan, Jacinto and Zhu, Yaonan and Hasegawa, Yasuhisa},
+  journal={SoftwareX},
+  volume={29},
+  pages={101979},
+  custom_type  = {A. Journal Article},
+  year={2025},
+  publisher={Elsevier}
+}
+
 @inproceedings{zhu2017hri,
   title={HRIにおける表情認識を用いたユーザの感情推定手法に関する基礎的検討},
   author={朱曜南 and ジメネス,フェリックス and 吉川大弘 and 古橋武},
