--- a/bib.bib
+++ b/bib.bib
@@ -10,6 +10,29 @@
   publisher={No longer published by Elsevier}
 }
 
+@article{WANG202541,
+title = {Prediction and validation of parameters of multi-axis soil remediation equipment based on machine learning algorithms},
+journal = {Particuology},
+volume = {98},
+pages = {41-55},
+year = {2025},
+issn = {1674-2001},
+doi = {https://doi.org/10.1016/j.partic.2025.01.007},
+custom_type  = {A. Journal Article},
+author = {Zhipeng Wang and Yuhang Jiang and Yaonan Zhu and Feng Ma and Youzhao Wang and Chaoyue Zhao and Xu Li and Tong Zhu}
+}
+
+@article{10896614,
+  author={Hatano, Sho and Zhu, Yaonan and Aoyama, Tadayoshi and Hasegawa, Yasuhisa},
+  journal={IEEE Robotics and Automation Letters}, 
+  title={Improved Availability of Mobile Network Teleoperation by Employing a Video Conferencing Application With Audio-Embedded Commands}, 
+  year={2025},
+  volume={},
+  number={},
+  pages={1-8},
+  custom_type  = {A. Journal Article},
+  doi={10.1109/LRA.2025.3544092}}
+
 @article{xie2015filtration,
   title={Filtration performance comparison of a metal membrane and an organic membrane in bioreactor},
   author={Xie, Yuanhua and Li, Xianjin and Chai, Tianyu and Ren, Jungang and Ding, Lan and Zhu, Yaonan and Han, Jin and Zhu, Tong},
@@ -256,6 +279,51 @@
   publisher={IEEE}
 }
 
+@inproceedings{liu2024yolo,
+  author    = {Songtao Liu and Yaonan Zhu and Tadayoshi Aoyama and Masayuki Nakaya and Yasuhisa Hasegawa},
+  title     = {YOLO Detection Enhancement through Latent Space Template Search},
+  booktitle = {2024 International Symposium on Micro-Nano Mechatronics and Human Science (MHS)},
+  custom_type  = {C. International Conference},
+  year      = {2024}
+}
+
+@inproceedings{becker2024integrating,
+  author    = {Becker, N. and Sovailo, K. and Zhu, C. and Gattung, E. and Hansel, K. and Schneider, T. and Zhu, Y. and Hasegawa, Y. and Peters, J.},
+  title     = {Integrating and Evaluating Visuo-Tactile Sensing with Haptic Feedback for Teleoperated Robot Manipulation},
+  booktitle = {IEEE International Conference on Robotics and Automation @40 (ICRA@40)},
+  custom_type  = {C. International Conference},
+  year      = {2024},
+  note      = {TuINT1S.59}
+}
+
+@inproceedings{dong2023deformable,
+  author    = {Dong, Zihao and Huang, Jian and Wang, Haoyuan and Yang, Bo and Wu, Dongrui and Zhu, Yaonan and Hasegawa, Yasuhisa},
+  title     = {Deformable Object Manipulation Using Human Demonstration Enhanced Deep Deterministic Policy Gradient},
+  booktitle = {2023 International Symposium on Micro-Nano Mechatronics and Human Science (MHS)},
+  pages     = {1--6},
+  year      = {2023},
+  custom_type  = {C. International Conference},
+  publisher = {IEEE}
+}
+
+@inproceedings{hatano2024impact,
+  author    = {Hatano, Sho and Zhu, Yaonan and Aoyama, Tadayoshi and Hasegawa, Yasuhisa},
+  title     = {Impact of Field-of-View on Depth Perception in Immersive Teleoperation},
+  booktitle = {2024 International Symposium on Micro-Nano Mechatronics and Human Science (MHS)},
+  custom_type  = {C. International Conference},
+  year      = {2024}
+}
+
+@inproceedings{zhang2023relative,
+  author    = {Zhang, Yikun and Huang, Jian and Yu, Jinqi and Zhu, Yaonan and Hasegawa, Yasuhisa},
+  title     = {Relative-Posture-Fixed Model Predictive Human-Following Control with Visibility Constraints in Obstacle Environments},
+  booktitle = {2023 International Conference on Advanced Robotics and Mechatronics (ICARM)},
+  pages     = {959--964},
+  year      = {2023},
+  custom_type  = {C. International Conference},
+  publisher = {IEEE}
+}
+
 @article{sugiura2023high,
   title={High-strength and flexible mechanism for body weight support},
   author={Sugiura, Sojiro and Unde, Jayant and Zhu, Yaonan and Hasegawa, Yasuhisa},
@@ -481,12 +549,25 @@ author={Morita, Tomoya and Armleder, Simon and Zhu, Yaonan and Iino, Hiroto and 
 journal={IEEE Robotics and Automation Letters}, 
 title={RNN-Based Visual Guidance for Enhanced Sense of Agency in Teleoperation With Time-Varying Delays}, 
 year={2024},
-volume={},
-number={},
-pages={1-8},
+volume={9},
+number={12},
+pages={11537-11544},
 custom_type  = {A. Journal Article},
+bibbase_note={Will be presented at IROS 2025},
 keywords={Robots;Delays;Visualization;Delay effects;Real-time systems;Predictive models;Cameras;Robot vision systems;Resists;Accuracy;Embodied cognitive science;learning from demonstration;telerobotics and teleoperation},
 doi={10.1109/LRA.2024.3495591}}
+
+@INPROCEEDINGS{10871020,
+author={Morita, Tomoya and Yamashita, Yuki and Zhu, Yaonan and Hasegawa, Yasuhisa},
+booktitle={2025 IEEE/SICE International Symposium on System Integration (SII)}, 
+title={Low-Cost Robot Operation Interface for Simultaneous Hand Position Input and Force Fine-Tuning Using Visual-Based Tactile Sensor}, 
+year={2025},
+volume={},
+number={},
+pages={157-158},
+custom_type  = {C. International Conference},
+keywords={Performance evaluation;Hands;Force;Tactile sensors;Position control;Virtual reality;Grasping;System integration;Grippers},
+doi={10.1109/SII59315.2025.10871020}}
 
 @inproceedings{hatano2023depth_perception,
   author    = {畑野勝  and 朱曜南  and 青山忠義  and 長谷川泰久},
