franka humanoid paper update

--- a/bib.bib
+++ b/bib.bib
@@ -94,6 +94,15 @@ author = {Zhipeng Wang and Yuhang Jiang and Yaonan Zhu and Feng Ma and Youzhao W
   year={2018}
 }
 
+@inproceedings{kojima2025comprehensive,
+  title={A Comprehensive Survey on Physical Risk Control in the Era of Foundation Model-enabled Robotics},
+  author={Kojima$^\ast$, Takeshi and Zhu$^\ast$, Yaonan and Iwasawa$^\ast$, Yusuke and Kitamura, Toshinori and Yan, Gang and Morikuni, Shu and Takanami, Ryosuke and Solano, Alfredo and Matsushima, Tatsuya and Murakami, Akiko and others},
+  booktitle={arXiv preprint arXiv:2505.12583 (IJCAI 2025 Survey Track)},
+  year={2025},
+  note={$^\ast$ Equal Contribution},
+  custom_type  = {C. International Conference}
+}
+
 @article{zhu2019development,
   title={Development of sense of self-location based on somatosensory feedback from finger tips for extra robotic thumb control},
   author={Zhu, Yaonan and Ito, Takayuki and Aoyama, Tadayoshi and Hasegawa, Yasuhisa},
